@@ -17,6 +17,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.groupingBy;
 
@@ -38,7 +39,7 @@ public class MessageServiceImpl implements MessageService {
   @Override
   public MessageListResponse getConversation(String u1, String u2) {
     List<Message> conversation = messageRepository.findAllByFromIsInAndToIsInOrderByTimestampDesc(List.of(u1, u2), List.of(u1, u2));
-    return MessageListResponse.builder().messageList(conversation.stream().map(message -> modelMapper.map(message, MessageResponse.class)).toList()).build();
+    return MessageListResponse.builder().messageList(conversation.stream().map(message -> modelMapper.map(message, MessageResponse.class)).collect(Collectors.toList())).build();
   }
   
   @Override
